--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,14 @@ botocore==1.34.85
 certifi==2024.2.2
 charset-normalizer==3.3.2
 exceptiongroup==1.2.0
+greenlet==3.0.3
 h11==0.14.0
 idna==3.7
 jmespath==1.0.1
 lxml==5.2.1
 outcome==1.3.0.post0
+playwright==1.43.0
+pyee==11.1.0
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 requests==2.31.0
