--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 beautifulsoup4==4.12.3
 boto3==1.34.85
-boto3==1.34.42
 botocore==1.34.85
-botocore==1.34.42
 Flask==3.0.3
 playwright==1.43.0
+lxml
+pytest
