update scraper/webdriver to make it work on AWS environment

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -5,13 +5,11 @@ provider:
   architecture: arm64
   region: eu-west-3
   versionFunctions: false
-  ecr:
-    images:
-      playwrightPython:
-        path: ./
-        file: Dockerfile
-  environment:
-    BUCKET_NAME: odds-portal-scrapped-odds
+  # ecr:
+  #   images:
+  #     playwright_python_arm64:
+  #       path: ./
+  #       file: Dockerfile
   iam:
     role:
       statements:
@@ -20,18 +18,19 @@ provider:
           - s3:PutObject
           - s3:GetObject
           - s3:DeleteObject
-        Resource: "arn:aws:s3:::odds-portal-scrapped-odds"
+        Resource: "arn:aws:s3:::odds-portal-scrapped-odds-cad8822c179f12cg"
 
 functions:
   scanAndStoreOddsPortalDataV2:
-    image:
-      name: playwrightPython
-    timeout: 300 # seconds
+    image: 792108524308.dkr.ecr.eu-west-3.amazonaws.com/serverless-odds-harvester-dev:playwright_python_arm64
+    # image:
+    #   name: playwright_python_arm64
+    timeout: 120 # seconds
     memorySize: 2048 # mb
     description: Retrieve and store sports betting odds
     events:
       - eventBridge:
-        schedule: rate(2 hours)
+        schedule: rate(60 minutes)
 
 package:
   individually: true
