init refactoring for v1

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Byte-compiled / optimized / DLL files
+*.DS_Store
 __pycache__/
+*.pyc
 *.py[cod]
 
 # C extensions
@@ -20,7 +22,6 @@ var/
 .installed.cfg
 *.egg
 node_modules
-.serverless/
 
 # Installer logs
 pip-log.txt
@@ -33,12 +34,15 @@ pip-delete-this-directory.txt
 nosetests.xml
 coverage.xml
 
-# Secrets
-secrets.json
-.env.yml
+# Ignore profiling output files
+*.prof
+profile_results.prof
+
+# VS Code
+.vscode/
 
 # Conda
 conda_packages.txt
 
-# Data
-data_analysis/
+# Secrets
+.env
