--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,3 +35,7 @@ skip-string-normalization = true
 [build-system]
 requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["core", "storage", "utils"]
+include-package-data = true
