--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ skip-string-normalization = true
 requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+where = ["."]
+
 [tool.setuptools]
-packages = ["core", "storage", "utils"]
 include-package-data = true
