--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     schedule:
       interval: "weekly"
     ignore:
+      ## reason: "Temporary compatibility issues. Revisit after migration to Python 3.13."
       - dependency-name: "playwright"
-        reason: "Temporary compatibility issues. Revisit after migration to Python 3.13."
     labels:
       - "pip-dependencies"
