--- a/.github/workflows/scraper_health_check.yml
+++ b/.github/workflows/scraper_health_check.yml
@@ -26,7 +26,7 @@ jobs:
         run: uv sync --all-extras --dev
 
       - name: Install Playwright Chromium Browser
-        run: playwright install chromium
+        run: uv run playwright install chromium
 
       - name: Run scraper layout tests
         run: uv run pytest tests/test_website_layout.py --headless
