--- a/.github/workflows/scraper_health_check.yml
+++ b/.github/workflows/scraper_health_check.yml
@@ -29,4 +29,4 @@ jobs:
         run: uv run playwright install chromium
 
       - name: Run scraper layout tests
-        run: uv run pytest tests/test_website_layout.py --headless
+        run: uv run pytest tests/test_website_layout.py
