--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -25,6 +25,11 @@ jobs:
         with:
           python-version-file: "pyproject.toml"
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libxml2-dev libxslt-dev python3-dev build-essential
+
       - name: Install dependencies
         run: uv sync --all-extras --dev
 
