--- a/.github/workflows/scraper_health_check.yml
+++ b/.github/workflows/scraper_health_check.yml
@@ -24,7 +24,8 @@ jobs:
       - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
-          python-version-file: "pyproject.toml"
+          python-version: "3.12"
+          cache: "pip"
 
       - name: Install system dependencies
         run: |
