--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
 dev = [
     "pre-commit>=4.5.1",
     "pytest>=9.0.2",
-    "pytest-asyncio>=1.3.0",
+    "pytest-asyncio>=0.24.0",
     "pytest-cov>=7.0.0",
     "ruff>=0.14.10",
 ]
@@ -38,6 +38,14 @@ testpaths = ["tests"]
 python_files = "test_*.py"
 python_classes = "Test*"
 python_functions = "test_*"
+addopts = "-m 'not integration'"
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
+markers = [
+    "integration: marks tests as integration tests (deselected by default, run with: pytest -m integration)",
+    "slow: marks tests as slow (>30 seconds)",
+    "asyncio: marks tests as async tests",
+]
 
 [tool.ruff]
 line-length = 120
